fullSandbox11072023/force-app/main/default/objects/Set_Request__c/Set_Request__c.object-meta.xml
<CustomObject>
    <label>Set Request</label>
    <nameField>
        <displayFormat>SETREQ{00000}</displayFormat>
        <label>Set Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Set Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>