fullSandbox11072023/force-app/main/default/objects/Set_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to related Account Record.</description>
    <inlineHelpText>Please select the account related to this Set Request.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Set Requests</relationshipLabel>
    <relationshipName>Set_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>