fullSandbox11072023/force-app/main/default/objects/Set_Request__c/fields/Days_fulfilled__c.field-meta.xml
<CustomField>
    <fullName>Days_fulfilled__c</fullName>
    <formula>IF( ISPICKVAL(Status__c, &apos;Fulfilled&apos;) ,TODAY() -  DATEVALUE(LastModifiedDate),0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days fulfilled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>