fullSandbox11072023/force-app/main/default/objects/Set_Request__c/fields/Did_this_result_in_a_sale__c.field-meta.xml
<CustomField>
    <fullName>Did_this_result_in_a_sale__c</fullName>
    <label>Did this result in a sale?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>