fullSandbox11072023/force-app/main/default/objects/Set_Request__c/fields/Explain__c.field-meta.xml
<CustomField>
    <fullName>Explain__c</fullName>
    <label>Explain</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>