fullSandbox11072023/force-app/main/default/objects/Set_Request__c/fields/National_Pool_Set__c.field-meta.xml
<CustomField>
    <fullName>National_Pool_Set__c</fullName>
    <label>Fulfilled National Pool Set</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>National_Pool_Set__c.Product__r.National_Pool__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>National_Pool_Set__c</referenceTo>
    <relationshipLabel>Fulfilled Requests</relationshipLabel>
    <relationshipName>Set_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>