fullSandbox11072023/force-app/main/default/objects/Set_Request__c/fields/Related_Product__c.field-meta.xml
<CustomField>
    <fullName>Related_Product__c</fullName>
    <formula>National_Pool_Set__r.Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Product</label>
    <type>Text</type>
</CustomField>