fullSandbox11072023/force-app/main/default/objects/Set_Request__c/fields/Return_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Return_Tracking_Number__c</fullName>
    <label>Return/Transfer Tracking Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>