fullSandbox11072023/force-app/main/default/objects/Set_Request__c/fields/Set_Code__c.field-meta.xml
<CustomField>
    <fullName>Set_Code__c</fullName>
    <label>Set Code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>