fullSandbox11072023/force-app/main/default/objects/Set_Request__c/fields/Set_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Set_Transfer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Set Transfer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Set_Request__c.Product__c</field>
            <operation>equals</operation>
            <valueField>$Source.Product__c</valueField>
        </filterItems>
        <filterItems>
            <field>Set_Request__c.Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Set_Request__c</referenceTo>
    <relationshipLabel>Set Requests</relationshipLabel>
    <relationshipName>Set_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>