fullSandbox11072023/force-app/main/default/objects/Set_Request__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <description>Shipping Address if other than the users residence.</description>
    <inlineHelpText>If this is not shipping to your residence, please provide appropriate customer contact information.</inlineHelpText>
    <label>Shipping Address</label>
    <type>TextArea</type>
</CustomField>