fullSandbox11072023/force-app/main/default/objects/Set_Request__c/fields/Shipping_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Carrier__c</fullName>
    <label>Shipping Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UPS</fullName>
                <default>true</default>
                <label>UPS</label>
            </value>
            <value>
                <fullName>FedEx</fullName>
            </value>
            <value>
                <fullName>USPS</fullName>
            </value>
            <value>
                <fullName>DHL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>