fullSandbox11072023/force-app/main/default/objects/Set_Request__c/fields/Tracking_Link__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Link__c</fullName>
    <formula>if(ispickval(Shipping_Carrier__c,&apos;UPS&apos;),HYPERLINK(&quot;http://wwwapps.ups.com/WebTracking/track?track=yes&amp;trackNums=&quot;+Tracking_Number__c,Tracking_Number__c),
if(ispickval(Shipping_Carrier__c,&quot;USPS&quot;),HYPERLINK(&quot;https://tools.usps.com/go/TrackConfirmAction_input?qtc_tLabels1=&quot;+Tracking_Number__c,Tracking_Number__c),
if(ispickval(Shipping_Carrier__c,&quot;Fedex&quot;),HYPERLINK(&quot;http://www.fedex.com/Tracking?action=track&amp;tracknumbers=&quot;+Tracking_Number__c,Tracking_Number__c),
if(ispickval(Shipping_Carrier__c,&quot;DHL&quot;),HYPERLINK(&quot;http://track.dhl-usa.com/TrackByNbr.asp?ShipmentNumber=&quot;+Tracking_Number__c,Tracking_Number__c),Tracking_Number__c
))))</formula>
    <label>Tracking Number</label>
    <type>Text</type>
</CustomField>