fullSandbox11072023/force-app/main/default/objects/Set_Request__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <label>Tracking Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>