fullSandbox11072023/force-app/main/default/objects/Set_Request__c/validationRules/Check_for_Locked_Set_Request.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_Locked_Set_Request</fullName>
    <active>true</active>
    <errorConditionFormula>Locked__c == true</errorConditionFormula>
    <errorMessage>This record is locked because it has been Denied, Returned or Transferred</errorMessage>
</ValidationRule>