fullSandbox11072023/force-app/main/default/objects/Set_Request__c/validationRules/Return_Tracking_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Return_Tracking_Number</fullName>
    <active>false</active>
    <errorConditionFormula>AND(OR(ispickval(Status__c,&quot;Transferred&quot;),ispickval(Status__c,&quot;Returned&quot;)),Return_Tracking_Number__c == null)</errorConditionFormula>
    <errorDisplayField>Return_Tracking_Number__c</errorDisplayField>
    <errorMessage>Return/Transfer Tracking Number Required</errorMessage>
</ValidationRule>