fullSandbox11072023/force-app/main/default/objects/Set_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>National_Pool_Set__c</columns>
    <columns>Requester__c</columns>
    <columns>Shipping_Carrier__c</columns>
    <columns>Status__c</columns>
    <columns>Tracking_Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>