fullSandbox11072023/force-app/main/default/objects/Set_Request__c/listViews/All_Returned.listView-meta.xml
<ListView>
    <fullName>All_Returned</fullName>
    <columns>NAME</columns>
    <columns>National_Pool_Set__c</columns>
    <columns>Product__c</columns>
    <columns>Status__c</columns>
    <columns>Return_Tracking_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Returned</value>
    </filters>
    <label>All Returned</label>
    <language>en_US</language>
</ListView>