fullSandbox11072023/force-app/main/default/objects/Set_Request__c/listViews/All_Transferred.listView-meta.xml
<ListView>
    <fullName>All_Transferred</fullName>
    <columns>NAME</columns>
    <columns>National_Pool_Set__c</columns>
    <columns>Set_Transfer__c</columns>
    <columns>Product__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Transferred</value>
    </filters>
    <label>All Transferred</label>
    <language>en_US</language>
</ListView>