fullSandbox11072023/force-app/main/default/objects/Set_Request__c/listViews/My_Requests_All.listView-meta.xml
<ListView>
    <fullName>My_Requests_All</fullName>
    <columns>NAME</columns>
    <columns>National_Pool_Set__c</columns>
    <columns>Product__c</columns>
    <columns>Shipping_Carrier__c</columns>
    <columns>Status__c</columns>
    <columns>Tracking_Link__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Requests All</label>
    <language>en_US</language>
</ListView>