fullSandbox11072023/force-app/main/default/objects/Set_Request__c/listViews/My_Requests_Denied.listView-meta.xml
<ListView>
    <fullName>My_Requests_Denied</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Denied</value>
    </filters>
    <label>My Requests Denied</label>
    <language>en_US</language>
</ListView>