fullSandbox11072023/force-app/main/default/objects/Set_Request__c/listViews/My_Requests_Pending.listView-meta.xml
<ListView>
    <fullName>My_Requests_Pending</fullName>
    <columns>NAME</columns>
    <columns>National_Pool_Set__c</columns>
    <columns>Product__c</columns>
    <columns>Status__c</columns>
    <columns>Shipping_Carrier__c</columns>
    <columns>Tracking_Link__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>My Requests Pending</label>
    <language>en_US</language>
</ListView>